--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -1,7 +1,8 @@
-# Configurations H2
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.datasource.sql-script-encoding=UTF-8
-
-# Configuration spécifique du microservice "Produit"
-mes-configs.limitDeProduits=5
+#Configurations H2 
+spring.jpa.show-sql=true 
+spring.h2.console.enabled=true 
+#defini l'encodage pour data.sql 
+spring.datasource.sql-script-encoding=UTF
+8 
+#Les configurations exetrenalisés 
+mes-configs.limitDeProduits= 5 
